friday_hitt_monolith_stack.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: VPC with public and private subnets and a NAT Gateway

Resources:

  FridayHittVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: FridayHittVPC

  # IGW
  ##########
  FridayHittInternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: FridayHittInternetGateway

  AttachGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref FridayHittVPC
      InternetGatewayId: !Ref FridayHittInternetGateway

  # Subnets
  ##########
  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref FridayHittVPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select
        - 0
        - !GetAZs
            Ref: 'AWS::Region'
      Tags:
        - Key: Name
          Value: PublicSubnet1

  PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref FridayHittVPC
      CidrBlock: 10.0.10.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select
        - 1
        - !GetAZs
          Ref: 'AWS::Region'
      Tags:
        - Key: Name
          Value: PublicSubnet2        

  ApplicationSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref FridayHittVPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select
        - 0
        - !GetAZs
            Ref: 'AWS::Region'
      Tags:
        - Key: Name
          Value: ApplicationSubnet1 

  ApplicationSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref FridayHittVPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: !Select
        - 1
        - !GetAZs
            Ref: 'AWS::Region'
      Tags:
        - Key: Name
          Value: ApplicationSubnet2                      

  DatabaseSubnetA:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref FridayHittVPC
      CidrBlock: 10.0.4.0/24
      AvailabilityZone: !Select 
        - 0
        - !GetAZs ''
      Tags:
        - Key: Name
          Value: DatabaseSubnetA

  DatabaseSubnetB:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref FridayHittVPC
      CidrBlock: 10.0.5.0/24
      AvailabilityZone: !Select 
        - 1
        - !GetAZs ''
      Tags:
        - Key: Name
          Value: DatabaseSubnetB

  DatabaseSubnetGroup:
    Type: 'AWS::RDS::DBSubnetGroup'
    Properties:
      DBSubnetGroupDescription: 'Subnet group for RDS instances'
      SubnetIds:
        - !Ref DatabaseSubnetA
        - !Ref DatabaseSubnetB
      Tags:
        - Key: Name
          Value: DatabaseSubnetGroup

  
  # Routing
  ##########
  NATGatewayEIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc

  NATGateway:
    Type: 'AWS::EC2::NatGateway'
    DependsOn: AttachGateway  # Ensure the Internet Gateway is attached before creating the NAT Gateway
    Properties:
      AllocationId: !GetAtt NATGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: FridayHittNATGateway
        

  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref FridayHittVPC
      Tags:
        - Key: Name
          Value: PublicRouteTable

  DefaultPublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref FridayHittInternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable    

  PrivateRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref FridayHittVPC
      Tags:
        - Key: Name
          Value: PrivateRouteTable

  DefaultPrivateRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway

  ApplicationSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref ApplicationSubnet1
      RouteTableId: !Ref PrivateRouteTable

  ApplicationSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref ApplicationSubnet2
      RouteTableId: !Ref PrivateRouteTable    

  DatabaseSubnetARouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref DatabaseSubnetA
      RouteTableId: !Ref PrivateRouteTable

  DatabaseSubnetBRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref DatabaseSubnetB
      RouteTableId: !Ref PrivateRouteTable  


  # Load Balancer
  ################
  PublicLoadBalancer:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Name: FridayHittPublicLoadBalancer
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      SecurityGroups:
        - !Ref LoadBalancerSecurityGroup
      Scheme: internet-facing
      Tags:
        - Key: Name
          Value: FridayHittPublicLoadBalancer

  ApplicationTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      VpcId: !Ref FridayHittVPC
      Port: 80
      Protocol: HTTP
      TargetType: instance
      Targets:
        - Id: !Ref ApplicationInstance1
        - Id: !Ref ApplicationInstance2
      HealthCheckEnabled: true
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      UnhealthyThresholdCount: 3

  ApplicationListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ApplicationTargetGroup
      LoadBalancerArn: !Ref PublicLoadBalancer
      Port: 80
      Protocol: HTTP            

  # Application Instance 
  #######################
  ApplicationInstance1:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: 'ami-0e309a5f3a6dd97ea' 
      InstanceType: 't2.micro'  
      SubnetId: !Ref ApplicationSubnet1
      SecurityGroupIds:
        - !Ref ApplicationInstanceSecurityGroup
      KeyName: 'cloudformation_application_instance_key' 
      Tags:
        - Key: Name
          Value: ApplicationInstance1
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          echo "<html><body><h1>Welcome to Apache on EC2 instance 1</h1></body></html>" > /var/www/html/index.html    

  ApplicationInstance2:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: 'ami-0e309a5f3a6dd97ea' 
      InstanceType: 't2.micro'  
      SubnetId: !Ref ApplicationSubnet2
      SecurityGroupIds:
        - !Ref ApplicationInstanceSecurityGroup
      KeyName: 'cloudformation_application_instance_key' 
      Tags:
        - Key: Name
          Value: ApplicationInstance2
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          echo "<html><body><h1>Welcome to Apache on EC2 instance 2</h1></body></html>" > /var/www/html/index.html            

  # Database Instance 
  #######################     
  DatabaseInstance:
    Type: 'AWS::RDS::DBInstance'
    Properties:
      DBInstanceClass: 'db.t3.micro' 
      AllocatedStorage: '20'  
      DBSubnetGroupName: !Ref DatabaseSubnetGroup
      VPCSecurityGroups:
        - !Ref DatabaseInstanceSecurityGroup
      DBName: 'FridayHittDatabase' 
      Engine: 'mysql'
      MasterUsername: 'username'
      MasterUserPassword: 'password'
      Tags:
        - Key: Name
          Value: DatabaseInstance



  # Jump Server
  ##############
  BastionHost:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: t2.micro
      KeyName: 'aws_atu_key'
      ImageId: 'ami-0e309a5f3a6dd97ea'
      SubnetId: !Ref PublicSubnet1
      SecurityGroupIds:
        - !Ref BastionSecurityGroup
      Tags:
        - Key: Name
          Value: BastionHost        
        
  # Security Groups 
  ##################

  LoadBalancerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security Group for Load Balancer
      VpcId: !Ref FridayHittVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: LoadBalancerSG

  ApplicationInstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Allow traffic from the load balancer to the application instance
      VpcId: !Ref FridayHittVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref BastionSecurityGroup   
      Tags:
        - Key: Name
          Value: ApplicationInstanceSG  


  DatabaseInstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security group for RDS database instance
      VpcId: !Ref FridayHittVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '3306'  # Replace with the port your database will use (3306 is default for MySQL)
          ToPort: '3306'
          SourceSecurityGroupId: !Ref ApplicationInstanceSecurityGroup
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref BastionSecurityGroup   
      Tags:
        - Key: Name
          Value: DatabaseInstanceSecurityGroup

  BastionSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Allow SSH access from the internet to the bastion
      VpcId: !Ref FridayHittVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: '146.70.48.3/32' 
      Tags:
        - Key: Name
          Value: BastionSecurityGroup                        

Outputs:
  VPCId:
    Description: The ID of the VPC
    Value: !Ref FridayHittVPC
  PublicSubnet1Id:
    Description: The ID of the first public subnet
    Value: !Ref PublicSubnet1
  PublicSubnet2Id:
    Description: The ID of the second public subnet
    Value: !Ref PublicSubnet2  
  InternetGatewayId:
    Description: The ID of the Internet Gateway
    Value: !Ref FridayHittInternetGateway
  ApplicationSubnet1Id:
    Description: The ID of the first Private Subnet for Appilcation servers
    Value: !Ref ApplicationSubnet1
  ApplicationSubnet2Id:
    Description: The ID of the second Private Subnet for Appilcation servers
    Value: !Ref ApplicationSubnet2    
  DatabaseSubnetAId:
    Description: The ID of the Private Subnet A for Database servers
    Value: !Ref DatabaseSubnetA
  DatabaseSubnetBId:
    Description: The ID of the Private Subnet B for Database servers
    Value: !Ref DatabaseSubnetB  
  PublicLoadBalancerDNSName:
    Description: DNS name for the public load balancer
    Value: !GetAtt PublicLoadBalancer.DNSName
  ApplicationInstance1Id:
    Description: The ID of the first application instance
    Value: !Ref ApplicationInstance1
  ApplicationInstance2Id:
    Description: The ID of the second application instance
    Value: !Ref ApplicationInstance2  
  ApplicationInstanceSecurityGroupId:
    Description: The ID of the application instance security group
    Value: !Ref ApplicationInstanceSecurityGroup
  DatabaseInstanceId:
    Description: The ID of the Database instance
    Value: !Ref DatabaseInstance
  DatabaseInstanceSecuityGroup:
    Description: The ID of the Database instance security group
    Value: !Ref DatabaseInstanceSecurityGroup
